--- a/Push_Swap/Makefile
+++ b/Push_Swap/Makefile
@@ -1,5 +1,5 @@
 var= pushswap
-SRC= function_nedeed.c parcing.c read_to_list.c array_check.c basic_functions.c
+SRC= function_nedeed.c parcing.c read_to_list.c array_check.c basic_functions.c list.c
 OBJS= $(SRC:.c=.o)
 CFLAGS= -Wall -Wextra -Werror
 CC= cc
