--- a/Push_Swap/Makefile
+++ b/Push_Swap/Makefile
@@ -1,7 +1,7 @@
 var= pushswap
 SRC= function_nedeed.c parcing.c read_to_list.c array_check.c basic_functions.c list.c rr_rotate.c rrr_rotate.c ss_swap.c operation_for_tree.c
 OBJS= $(SRC:.c=.o)
-CFLAGS= -Wall -Wextra -Werror
+CFLAGS= -Wall -Wextra -Werror -g
 CC= cc
 RM= rm -rf
 all : $(var)
