--- a/Ps/Makefile
+++ b/Ps/Makefile
@@ -1,7 +1,7 @@
 var= push_swap
 bons= checker
 SRC= main.c function_nedeed.c parcing.c read_to_list.c array_check.c basic_functions.c list.c rr_rotate.c rrr_rotate.c ss_swap.c operation_for_tree.c less_hightst.c pa_push.c whole_algo.c cheker_two.c checker.c
-SRC2= bonus_part.c function_nedeed.c parcing.c read_to_list.c array_check.c basic_functions.c list.c rr_rotate.c rrr_rotate.c ss_swap.c operation_for_tree.c less_hightst.c pa_push.c whole_algo.c cheker_two.c checker.c
+SRC2= bonus_part.c raa_for_bonus.c rest_rr_bonus.c function_nedeed.c parcing.c read_to_list.c array_check.c basic_functions.c list.c rr_rotate.c rrr_rotate.c ss_swap.c operation_for_tree.c less_hightst.c pa_push.c whole_algo.c cheker_two.c checker.c
 OBJS= $(SRC:.c=.o)
 OBJS2= $(SRC2:.c=.o)
 CFLAGS= -Wall -Wextra -Werror 
