--- a/Ps/Makefile
+++ b/Ps/Makefile
@@ -4,7 +4,7 @@ SRC= main.c function_nedeed.c parcing.c read_to_list.c array_check.c basic_funct
 SRC2= bonus_part.c raa_for_bonus.c rest_rr_bonus.c function_nedeed.c parcing.c read_to_list.c array_check.c basic_functions.c list.c rr_rotate.c rrr_rotate.c ss_swap.c operation_for_tree.c less_hightst.c pa_push.c whole_algo.c cheker_two.c checker.c complet_bonus.c for_extra.c compelt_number.c only_for_second.c
 OBJS= $(SRC:.c=.o)
 OBJS2= $(SRC2:.c=.o)
-CFLAGS= -Wall -Wextra -Werror 
+CFLAGS= -Wall -Wextra -Werror -g
 CC= cc
 RM= rm -rf
 all : $(var)
